# zego-rtc

./: CMakeLists.txt  README.md  ZegoRTCEngine.cpp  ZegoRTCEngine.h
ZegoExpress/win/x64/: ZegoExpressEngine.lib
ZegoExpress/win/x64/include/: ZegoExpressDefines.h  ZegoExpressErrorCode.h  ZegoExpressEventHandler.h  ZegoExpressInterface.h  ZegoExpressSDK.h
ZegoExpress/win/x64/include/internal/: ZegoInternalBase.h  ZegoInternalBridge.h  ZegoInternalDefines.hpp  ZegoInternalEngineImpl.hpp  ZegoInternalExplicit.hpp
ZegoExpress/win/x64/include/internal/include/: zego-express-custom-audio-io.h  zego-express-defines.h  zego-express-device.h  zego-express-errcode.h  zego-express-mediaplayer.h  zego-express-player.h  zego-express-preprocess.h  zego-express-publisher.h  zego-express-utilities.h
